[gd_scene load_steps=14 format=3 uid="uid://fy1npfb2ufiv"]

[ext_resource type="PackedScene" uid="uid://b68vs0af4e7hi" path="res://scenes/entities/entity.tscn" id="1_84lu0"]
[ext_resource type="Script" path="res://scenes/entities/drone.gd" id="2_h1str"]
[ext_resource type="Texture2D" uid="uid://brbybbdwd8ykl" path="res://graphics/entities/drone.png" id="2_lx2vu"]
[ext_resource type="Shader" uid="uid://cnay8p26e0eqq" path="res://shaders/flash.tres" id="3_6b0fs"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lo371"]
radius = 7.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qdmfd"]
resource_local_to_scene = true
shader = ExtResource("3_6b0fs")
shader_parameter/ColorParameter = Color(1, 1, 1, 1)
shader_parameter/Progress = null

[sub_resource type="AtlasTexture" id="AtlasTexture_e302q"]
atlas = ExtResource("2_lx2vu")
region = Rect2(0, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s57tv"]
atlas = ExtResource("2_lx2vu")
region = Rect2(32, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qcchn"]
atlas = ExtResource("2_lx2vu")
region = Rect2(64, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjg8p"]
atlas = ExtResource("2_lx2vu")
region = Rect2(96, 0, 32, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_avuff"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e302q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s57tv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qcchn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjg8p")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_12eac"]
radius = 103.005

[sub_resource type="CircleShape2D" id="CircleShape2D_irun2"]

[node name="Drone" groups=["Enemies", "Entity"] instance=ExtResource("1_84lu0")]
collision_layer = 4
collision_mask = 3
script = ExtResource("2_h1str")

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource("CircleShape2D_lo371")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." index="2"]
material = SubResource("ShaderMaterial_qdmfd")
sprite_frames = SubResource("SpriteFrames_avuff")
autoplay = "default"
frame_progress = 0.428532

[node name="PlayerDetectionArea" type="Area2D" parent="." index="3"]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea" index="0"]
shape = SubResource("CircleShape2D_12eac")

[node name="CollisionDetectionArea" type="Area2D" parent="." index="4"]
collision_layer = 16
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionDetectionArea" index="0"]
shape = SubResource("CircleShape2D_irun2")

[connection signal="body_entered" from="PlayerDetectionArea" to="." method="_on_player_detection_area_body_entered"]
[connection signal="body_exited" from="PlayerDetectionArea" to="." method="_on_player_detection_area_body_exited"]
[connection signal="body_entered" from="CollisionDetectionArea" to="." method="_on_collision_detection_area_body_entered"]
